# CPP4_3DViewer_v2.0-2

src/: CMakeLists.txt  Makefile  README.md  main.cc  resources.qrc
src/controllers/: controller.cc  controller.h  controller_singleton.cc  controller_singleton.h
src/gif/: CMakeLists.txt
src/gif/gif_image/: qgifimage.cpp
src/models/: OBJParser.cpp  OBJParser.h  Object.cpp  Object.h  matrix.cc  matrix.h  matrix4x4.cc  matrix4x4.h  model.cc  model.h  model_facade.cc  model_facade.h  obj_parser.cc  obj_parser.cpp  obj_parser.h  obj_parser_v2.cc  obj_parser_v2.h  object.cc  object.h  object_v2.cc  object_v2.h  observable.cc  observable.h  observer.h  parser.cpp  parser.h  renderer.cc  renderer.h  renderer_old.cc  screenshot.cc  screenshot.h  screenshot_strategy.cc  screenshot_strategy.h  settings.cc  settings.h  test_parser.cc  transform.cc  transform.h  transform_old.cc  type.h
src/models/shaders/: frag.glsl  vert.glsl
src/tests/: Makefile  parser_test.cc  settings_test.cc  test_parser.cc  transform_test.cc
src/views/: canvas.cc  canvas.h  mainwindow.cc  mainwindow.h  mainwindow.ui  screencastthread.cc  screencastthread.h
